package(default_visibility = ["//visibility:public"])

load("@bazel_node//:defs.bzl", "js_binary", "npm_packages")

exports_files(["tsconfig.json"])

js_binary(
  name = "app",
  lib = "//src:main",
  entry = "main.js",
)

npm_packages(
  name = "packages",
  package_json = ":package.json",
  yarn_lock = ":yarn.lock",
)
